objects/SB_Pricing__c.object
<CustomObject>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>SB Pricing</relationshipLabel>
        <relationshipName>SB_Pricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Volume_Day__c</fullName>
        <label>Volume / Day</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 GB / Day</fullName>
                </value>
                <value>
                    <fullName>2 GB / Day</fullName>
                </value>
                <value>
                    <fullName>5 GB / Day</fullName>
                </value>
                <value>
                    <fullName>10 GB / Day</fullName>
                </value>
                <value>
                    <fullName>15 GB / Day</fullName>
                </value>
                <value>
                    <fullName>20 GB / Day</fullName>
                </value>
                <value>
                    <fullName>50 GB / Day</fullName>
                </value>
                <value>
                    <fullName>100 GB / Day</fullName>
                </value>
                <value>
                    <fullName>250 GB / Day</fullName>
                </value>
                <value>
                    <fullName>500 GB / Day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SB Pricing</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Volume_Day__c</columns>
        <columns>Unit_Price__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Ent</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SB Pricing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>